--- a/Sam-Belliveau.tex
+++ b/Sam-Belliveau.tex
@@ -123,8 +123,8 @@
 \section{Education}
   \resumeSubHeadingListStart
     \resumeSubheading
-      {Cornell University}{Ithica, NY}
-      {Bachelor of Engineering in Elecrtical Computer Engineering}{Aug. 2022 -- May 2026}
+      {Cornell University}{Ithaca, NY}
+      {Bachelor of Engineering in Electrical Computer Engineering}{Aug. 2022 -- May 2026}
     \resumeSubheading
       {Stuyvesant High School}{New York, NY}
       {Regents Diploma with Advanced Designation with Honors}{Sept. 2018 -- Jun. 2022}
@@ -146,7 +146,7 @@
 
     \resumeSubheading
       {Undergraduate Researcher}{June 2024 -- Present}
-      {Abe Davis's Group @ Cornell University}{Ithica, NY}
+      {Abe Davis's Group @ Cornell University}{Ithaca, NY}
       \resumeItemListStart
         \resumeItem{Refactored ReCapture application to use modern SwiftUI frameworks \& coding practices}
         \resumeItem{Built robust framework for storing image metadata in ReCapture to allow for easy retrieval}
