--- a/Sam-Belliveau.tex
+++ b/Sam-Belliveau.tex
@@ -172,7 +172,7 @@
       {Software Intern on Consumer Product Team}{July 2022 -- September 2022}
       {Reddit Inc.}{Remote}
       \resumeItemListStart
-      \resumeItem{Worked with Taxonomy Group, which classified the safety of the +138,000 on Reddit}
+      \resumeItem{Worked with Taxonomy Group, which classified the safety of +138,000 subreddits on Reddit}
       \resumeItem{Developed a script that created realistic test data in order to verify the accuracy of the safety classification models}
       \resumeItem{Improved flagging of problematic content by adding statistics to the dashboard to find content that needed review}
     \resumeItemListEnd
