--- a/Sam-Belliveau.tex
+++ b/Sam-Belliveau.tex
@@ -113,9 +113,10 @@
 
 \begin{center}
     \textbf{\Huge Sam Belliveau} \\ \vspace{1pt}
-    \small +1 (646) 691-6208 $|$ \href{mailto:x@x.com}{\underline{sam.belliveau@gmail.com}} $|$ 
-    \href{https://linkedin.com/in/...}{\underline{linkedin.com/in/sam-belliveau}} $|$
-    \href{https://github.com/...}{\underline{github.com/Sam-Belliveau}}
+    \small (646) 691-6208 $|$ 
+    \href{mailto:sam.belliveau@gmail.com}{\underline{sam.belliveau@gmail.com}} $|$ 
+    \href{https://linkedin.com/in/sam-belliveau}{\underline{linkedin.com/in/sam-belliveau}} $|$
+    \href{https://github.com/Sam-Belliveau}{\underline{github.com/Sam-Belliveau}}
 \end{center}
 
 
