--- a/components/resume/experience/items/2023-cuauv-software.tex
+++ b/components/resume/experience/items/2023-cuauv-software.tex
@@ -3,5 +3,5 @@
     {Cornell University Autonomous Underwater Vehicles}{Ithaca, NY}
     \resumeItemListStart
         \resumeItem{Reduced CPU usage by 80\% by implementing Kalman Filtering using Nvidia's CUDA framework for linear algebra}
-        \resumeItem{Improved submarine movement by implementing least squares optimization for determining thruster}
+        \resumeItem{Improved submarine movement by implementing least squares optimization for determining thruster speeds}
     \resumeItemListEnd
