Update Hyper Links

--- a/components/resume/heading/common.tex
+++ b/components/resume/heading/common.tex
@@ -2,6 +2,6 @@
     \textbf{\Huge Sam Belliveau} \\ \vspace{1pt}
     \small (646) 691-6208 $|$ 
     \href{mailto:sam.belliveau@gmail.com}{\underline{sam.belliveau@gmail.com}} $|$ 
-    \href{https://linkedin.com/in/sam-belliveau}{\underline{linkedin.com/in/sam-belliveau}} $|$
-    \href{https://github.com/Sam-Belliveau}{\underline{github.com/Sam-Belliveau}}
+    \href{https://www.linkedin.com/in/sam-belliveau}{\underline{https://linkedin.com/in/sam-belliveau}} $|$
+    \href{https://www.github.com/Sam-Belliveau}{\underline{https://github.com/Sam-Belliveau}}
 \end{center}
