--- a/components/resume/projects/items/2024-recapture.tex
+++ b/components/resume/projects/items/2024-recapture.tex
@@ -1,5 +1,5 @@
 \resumeProjectHeading
-    {\textbf{ReCapture} $|$ \emph{Swift, SwiftUI, iOS, Json, OpenCV, Computer Vision}}{June 2024 -- August 2024}
+    {\textbf{iOS Application: ReCapture} $|$ \emph{Swift, SwiftUI, iOS, Json, OpenCV, Computer Vision}}{June 2024 -- August 2024}
     \resumeItemListStart
         \resumeItem{Rewrote ReCapture, an application that helps users take photos of subjects over time in order to create timelapses}
         \resumeItem{Implemented Computer Vision algorithms that indexed the metadata to automatically create unique visualizations}
