--- a/components/resume/projects/items/2023-flying-dutchman.tex
+++ b/components/resume/projects/items/2023-flying-dutchman.tex
@@ -1,5 +1,5 @@
 \resumeProjectHeading
-    {\textbf{Flying Dutchman} $|$ \emph{Rust, Min Max, Alpha Beta Pruning, Chess}}{June 2023 -- July 2023}
+    {\textbf{UCI Chess Engine in Rust} $|$ \emph{Rust, Min Max, Alpha Beta Pruning, Chess}}{June 2023 -- July 2023}
     \resumeItemListStart
         \resumeItem{Developed a Chess Engine in Rust that achieved an Elo of ~2700 (Grand Master level)}
         \resumeItem{Implemented Alpha Beta Pruning using high performance Rust to achieve a higher elo rating}
