--- a/components/resume/experience/items/2024-abe-davis-research.tex
+++ b/components/resume/experience/items/2024-abe-davis-research.tex
@@ -3,5 +3,5 @@
     {Abe Davis's Group @ Cornell University}{Ithaca, NY}
     \resumeItemListStart
         \resumeItem{Rewrote 7,252 lines of code to build a well documented, expandable foundation for the ReCapture project in Swift}
-        \resumeItem{Implemented a database allowing for the stoage and indexing of 20+ features over a large set of images}
+        \resumeItem{Implemented a relational database allowing for the stoage and indexing of 20+ features over a large set of images}
     \resumeItemListEnd
