--- a/components/resume/experience/items/2021-reddit-software.tex
+++ b/components/resume/experience/items/2021-reddit-software.tex
@@ -2,6 +2,6 @@
     {Software Intern on Consumer Product Team}{July 2021 -- September 2021}
     {Reddit Inc.}{Remote}
     \resumeItemListStart
-        \resumeItem{Created comprehensive unit tests to catch bugs before deploying to production}
-        \resumeItem{Worked with tools such as BigQuery and Cassandra to send notifications reminding moderators to fill out surveys}
+        \resumeItem{Authored comprehensive unit tests to ensure code reliability and prevent regressions prior to production deployment}
+        \resumeItem{Leveraged BigQuery and Cassandra to architect a scalable notification system for moderator engagement campaigns}
     \resumeItemListEnd
