--- a/components/resume/experience/items/2022-reddit-software.tex
+++ b/components/resume/experience/items/2022-reddit-software.tex
@@ -2,7 +2,7 @@
     {Software Intern on Consumer Product Team}{July 2022 -- September 2022}
     {Reddit Inc.}{Remote}
     \resumeItemListStart
-        \resumeItem{Worked with Taxonomy Group, which classified the safety of +138,000 subreddits on Reddit}
-        \resumeItem{Developed a script that created realistic test data in order to verify the accuracy of the safety classification models}
-        \resumeItem{Improved flagging of problematic content by adding statistics to the dashboard to find content that needed review}
+        \resumeItem{Collaborated with the Taxonomy Group to classify and ensure the safety of over 138,000 subreddits}
+        \resumeItem{Designed and implemented a synthetic data generation script to rigorously validate the accuracy of safety classification models}
+        \resumeItem{Optimized content moderation workflows by integrating real-time statistical metrics into the dashboard, accelerating the identification of problematic content}
     \resumeItemListEnd
