--- a/components/resume/experience/items/2023-feinstein-signal-analysis.tex
+++ b/components/resume/experience/items/2023-feinstein-signal-analysis.tex
@@ -2,6 +2,6 @@
     {Signal Analysis Intern}{January 2023 -- May 2023}
     {Feinstein Institute for Medical Research}{Manhasset, NY}
     \resumeItemListStart
-        \resumeItem{Automated Sharp Wave Ripple (SWR) detection using Python and SciPy to analyze EEG data}
-        \resumeItem{Researched SWRs, which help predict the onset of seizures, in order to improve the accuracy of the detection}
+        \resumeItem{Engineered an automated Sharp Wave Ripple (SWR) detection pipeline using Python and SciPy to process large-scale EEG datasets}
+        \resumeItem{Conducted analysis on SWR characteristics to refine detection algorithms, directly contributing to improved seizure prediction models}
     \resumeItemListEnd
