--- a/components/resume/experience/items/2024-abe-davis-research.tex
+++ b/components/resume/experience/items/2024-abe-davis-research.tex
@@ -2,6 +2,6 @@
     {Undergraduate Researcher}{June 2024 -- Present}
     {Abe Davis's Group @ Cornell University}{Ithaca, NY}
     \resumeItemListStart
-        \resumeItem{Rewrote 7,252 lines of code to build a well documented, expandable foundation for the ReCapture project in Swift}
-        \resumeItem{Implemented a relational database allowing for the stoage and indexing of 20+ features over a large set of images}
+        \resumeItem{Spearhead research in computational photography and audio analysis, contributing as first and second author on key publications}
+        \resumeItem{Modernized the ReCapture iOS application by rewriting over 7,000 lines of Swift, significantly improving compatibility and performance on modern devices}
     \resumeItemListEnd
