--- a/components/resume/projects/items/2022-dolphin-emu.tex
+++ b/components/resume/projects/items/2022-dolphin-emu.tex
@@ -1,6 +1,6 @@
 \resumeProjectHeading
     {\textbf{Dolphin Emulator} $|$ \emph{C++, GLSL, JIT Recompilation}}{September 2022 -- Present}
     \resumeItemListStart
-        \resumeItem{Improved performance of emulation software by scaling frequency of video interrupt signals for low-end hardware}
-        \resumeItem{Introduced 6 GPU accelerated resolution scaling algorithms to improve the image quality for all display resolution}
+        \resumeItem{Optimized emulation performance on low-end hardware by dynamically scaling video interrupt signal frequency}
+        \resumeItem{Implemented six GPU-accelerated resolution scaling algorithms (GLSL), enhancing image fidelity across diverse display resolutions}
     \resumeItemListEnd
