--- a/components/resume/projects/items/2024-recapture.tex
+++ b/components/resume/projects/items/2024-recapture.tex
@@ -1,6 +1,6 @@
 \resumeProjectHeading
     {\textbf{iOS Application: ReCapture} $|$ \emph{Swift, SwiftUI, iOS, Json, OpenCV, Computer Vision}}{June 2024 -- August 2024}
     \resumeItemListStart
-        \resumeItem{Rewrote ReCapture, an application that helps users take photos of subjects over time in order to create timelapses}
-        \resumeItem{Implemented Computer Vision algorithms that indexed the metadata to automatically create unique visualizations}
+        \resumeItem{Re-architected ReCapture, an iOS application facilitating long-term timelapse photography}
+        \resumeItem{Integrated computer vision algorithms to index image metadata, enabling the automatic generation of unique data visualizations}
     \resumeItemListEnd
