--- a/components/resume/experience/items/2023-cuauv-software.tex
+++ b/components/resume/experience/items/2023-cuauv-software.tex
@@ -2,6 +2,6 @@
     {Robotics Software Engineer}{November 2023 -- Present}
     {Cornell University Autonomous Underwater Vehicles}{Ithaca, NY}
     \resumeItemListStart
-        \resumeItem{Reduced CPU usage by 80\% by implementing Kalman Filtering using Nvidia's CUDA framework for linear algebra}
-        \resumeItem{Improved submarine movement by implementing least squares optimization for determining thruster speeds}
+        \resumeItem{Slashed CPU usage by 80\% by offloading Kalman Filter computations to the GPU using Nvidia's CUDA framework}
+        \resumeItem{Enhanced autonomous navigation precision by implementing least squares optimization for dynamic thruster allocation}
     \resumeItemListEnd
